# agents-playground

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  main.py  pyproject.toml  srt-settings.json
.github/workflows/: pages.yml
agentchat/: __init__.py  agent.py  llm.py  middleware.py  resume.py  ui.py
agentchat/chat/: __init__.py  common.py  direct.py  programmatic.py
agentchat/middleware/: __init__.py  logging.py  skill_suggest.py  suggest.py  tool_filter.py  tool_suggest.py
agentchat/tools/: __init__.py  builtin.py  embeddings.py  mcp.py  registry.py  sandbox.py  search.py  search_tools_or_skills.py
agentchat/tools/skills/: __init__.py  index.py  tools.py
agentchat/tools/tool_search/: __init__.py  index.py  tool_search.py
docs/: agentchat.md  tool-patterns.md  types.md
mcp_servers/: __init__.py  leisure_server.py  life_server.py  math_server.py  money_server.py  string_server.py  work_server.py
nbconvert_templates/: config.py
nbconvert_templates/plaintext/: index.md.j2
notebooks/: __init__.py  basics.ipynb  checkpoints.ipynb  dynamic-tools-failed.ipynb  mcp-adapters.ipynb  middleware-history.ipynb  middleware-hitl.ipynb  middleware.ipynb  multi-agent-handoff.ipynb  multi-agent-supervisor.ipynb  programmatic-tool-calling.ipynb  tool-filter-token-savings.ipynb  tool-search-filter.ipynb  tool-search-hybrid.ipynb  tool-search-interrupt.ipynb  tool-search-outline.ipynb  tool-search.ipynb
notebooks/mcp_servers/: __init__.py  math_server.py  string_server.py
scripts/: dump_checkpoints.py  generate-pages.sh  generate_pages.py
skills/api-integration/: SKILL.md
skills/api-integration/examples/: github_api.py  openai_api.py
skills/api-integration/templates/: rest_client.py
skills/budget-advisor/: SKILL.md
skills/code-review/: SKILL.md
skills/creative-writer/: SKILL.md
skills/customer-support/: SKILL.md
skills/data-analysis/: SKILL.md  example.py
skills/debate-coach/: SKILL.md
skills/document-summary/: SKILL.md
skills/email-composer/: SKILL.md
skills/git-workflow/: SKILL.md
skills/image-processing/: SKILL.md
skills/interview-prep/: SKILL.md
skills/language-tutor/: SKILL.md
skills/meeting-facilitator/: SKILL.md
skills/presentation-builder/: SKILL.md
skills/project-manager/: SKILL.md
skills/recipe-creator/: SKILL.md
skills/research-assistant/: SKILL.md
skills/social-media-manager/: SKILL.md
skills/test-generation/: SKILL.md
skills/translation/: SKILL.md
skills/travel-planner/: SKILL.md
skills/web-scraping/: SKILL.md
